# sentence-to-words

./: README.md  main.py  pyproject.toml  test_main.py
